--- a/exercises/04Components/index.html
+++ b/exercises/04Components/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>03</title>
+  <title>04 Components</title>
   <script src="..\..\node_modules\angular\angular.js"></script>
   <script src="app.js"></script>
   
