--- a/exercises/06Services/index.html
+++ b/exercises/06Services/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>05</title>
+  <title>06 Services</title>
   <script src="..\..\node_modules\angular\angular.js"></script>
   <script src="..\..\node_modules\angular-ui-router\release\angular-ui-router.js"></script>
   <script src="scripts\app.js"></script>
