--- a/samples/07Transclusion/index.html
+++ b/samples/07Transclusion/index.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-  <title>03</title>
+  <title>07 - Transclusion Sample</title>
   <script src="..\..\node_modules\angular\angular.js"></script>
   <script src="..\..\node_modules\angular-animate\angular-animate.js"></script>
-  <script src="..\..\node_modules\angular-route\angular-route.js"></script>
   <script src="app.js"></script>
 
   <style>
